[gd_scene load_steps=21 format=3 uid="uid://cgyppmbr4qfrv"]

[ext_resource type="Script" uid="uid://n1de3p7lrkj" path="res://scenes/menu_start.gd" id="1_ncqf3"]
[ext_resource type="VideoStream" uid="uid://ckih61bkb2thg" path="res://sprites/menu/video_hud_start.ogv" id="2_cp8n1"]
[ext_resource type="Texture2D" uid="uid://ck8pdhutmfu1m" path="res://sprites/menu/NewGame.png" id="3_4jmj5"]
[ext_resource type="Texture2D" uid="uid://4200e57f0vq8" path="res://sprites/menu/NewGameGolden.png" id="4_phe8i"]
[ext_resource type="Texture2D" uid="uid://qkv7m5q041c" path="res://sprites/menu/Settings.png" id="5_orngt"]
[ext_resource type="Texture2D" uid="uid://bf6jdm2p5opb2" path="res://sprites/menu/SettingGolden.png" id="6_rmmsc"]
[ext_resource type="Texture2D" uid="uid://bg0cvcbdyxh8s" path="res://sprites/menu/Quit.png" id="7_tjvo7"]
[ext_resource type="Texture2D" uid="uid://ddl2xunnp6eye" path="res://sprites/menu/QuitGolden.png" id="8_m0ayq"]
[ext_resource type="FontFile" uid="uid://dxnm0obu17xh8" path="res://sprites/Fonte TItulo/Almendra-Bold.ttf" id="9_5poo7"]
[ext_resource type="AudioStream" uid="uid://bqphs7y4b8r8d" path="res://sounds/menu.mp3" id="10_orngt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dc4yy"]
texture = ExtResource("3_4jmj5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_egsp4"]
texture = ExtResource("4_phe8i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cp8n1"]
texture = ExtResource("4_phe8i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lktnr"]
texture = ExtResource("5_orngt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7p3p3"]
texture = ExtResource("6_rmmsc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfmnw"]
texture = ExtResource("6_rmmsc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xj2p"]
texture = ExtResource("7_tjvo7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_odb0t"]
texture = ExtResource("8_m0ayq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wj03c"]
texture = ExtResource("8_m0ayq")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_orngt"]

[node name="menu_start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ncqf3")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stream = ExtResource("2_cp8n1")
volume_db = -80.0
autoplay = true
loop = true

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 308.0
offset_right = 722.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_dc4yy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_egsp4")
theme_override_styles/hover = SubResource("StyleBoxTexture_cp8n1")
text = "
"

[node name="Options" type="Button" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 434.0
offset_right = 710.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_lktnr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7p3p3")
theme_override_styles/hover = SubResource("StyleBoxTexture_xfmnw")
text = "
"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 531.0
offset_right = 709.0
offset_bottom = 615.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_2xj2p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_odb0t")
theme_override_styles/hover = SubResource("StyleBoxTexture_wj03c")
text = "
"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 137.0
offset_right = 346.0
offset_bottom = 268.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 0.5568628, 0.105882354, 1)
theme_override_fonts/font = ExtResource("9_5poo7")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_orngt")
text = "Ship Sweet Ship"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_orngt")
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
